# mt310s2d

./: CMakeLists.txt  adjflash.cpp  adjflash.h  adjustment.cpp  adjustment.h  adjxml.cpp  adjxml.h  atmel.cpp  atmel.h  atmelsysctrl.h  atmelwatcher.cpp  basepcbserver.cpp  basepcbserver.h  basestatusinterface.h  basesysteminfo.cpp  basesysteminfo.h  basesysteminterface.cpp  basesysteminterface.h  clamp.cpp  clamp.h  clampinterface.cpp  clampinterface.h  clampjustdata.cpp  clampjustdata.h  classes-copied-alover  ctrlsettings.cpp  ctrlsettings.h  debugsettings.cpp  debugsettings.h  directjustdata.cpp  directjustdata.h  ethsettings.cpp  ethsettings.h  fpgasettings.cpp  fpgasettings.h  fpzchannel.cpp  fpzchannel.h  fpzinchannel.cpp  fpzinchannel.h  frqinputinterface.cpp  (+62 more)
.github/workflows/: buildAndTest.yml
src/: CMakeLists.txt  adjflash.cpp  adjflash.h  clamp.cpp  clamp.h  clampinterface.cpp  fpzchannel.cpp  fpzchannel.h  fpzinchannel.cpp  fpzinchannel.h  frqinputsettings.cpp  hkeychannel.cpp  hkeychannel.h  hkeyinterface.cpp  hkeysettings.cpp  i2cmuxer.cpp  i2cmuxer.h  i2csettings.cpp  justdata.cpp  mt310s2d.cpp  mt310s2d.h  mt310s2justdata.cpp  mt310s2justdata.h  notificationdata.h  pcbserver.cpp  pcbserver.h  resource.h  samplerange.cpp  samplerange.h  samplinginterface.cpp  scheadchannel.cpp  scheadchannel.h  scheadinterface.cpp  scheadsettings.cpp  scpiconnection.h  sensechannel.cpp  sensechannel.h  senseinterface.cpp  senserange.cpp  senserange.h  (+4 more)
src/interfaces/: clampinterface.cpp  clampinterface.h  frqinputinterface.cpp  hkeyinterface.cpp  scheadinterface.h  senseinterface.cpp  senseinterface.h  statusinterface.h
src/micro-controller-io/: atmelsysctrl.h
src/scpi-interfaces/: clampinterface.cpp  clampinterface.h  emobinterface.cpp  emobinterface.h  frqinputinterface.cpp  hkeyinterface.cpp  hkeyinterface.h  samplinginterface.cpp  scheadinterface.cpp  senseinterface.cpp  sourceinterface.cpp  statusinterface.cpp  statusinterface.h  systeminterface.cpp
src/settings/: ctrlsettings.h  debugsettings.h  ethsettings.h  frqinputsettings.h  hkeysettings.h  i2csettings.cpp  i2csettings.h  sensesettings.h  sourcesettings.h  xmlsettings.cpp  xmlsettings.h
tests/: CMakeLists.txt
tests/qtest/: CMakeLists.txt  main-unittest-qt.cpp  main-unittest-qt.h  qt-unittest-emobinterfacetest.cpp  qt-unittest-emobinterfacetest.h  testserver.cpp  testserver.h
